# provero

./: .asf.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  NOTICE  README.md  pyproject.toml
.github/workflows/: backport.yaml  ci.yaml  constraints.yaml  docs.yaml  publish.yaml
aql-spec/: schema.json  spec.md
constraints/: constraints-3.11.txt  constraints-3.12.txt  constraints-3.13.txt
docs/: ARCHITECTURE.md  checks.md  cli.md  index.md
examples/ecommerce/: seed_data.py
examples/quickstart/: provero.yaml
provero-airflow/: pyproject.toml
provero-airflow/src/provero/airflow/: decorators.py  operators.py
provero-core/: pyproject.toml
provero-core/src/provero/: schema.json
provero-core/src/provero/checks/: registry.py
provero-core/src/provero/cli/: main.py
provero-core/src/provero/connectors/: factory.py
provero-core/src/provero/reporting/templates/: report.html
provero-core/src/provero/store/: sqlite.py
provero-core/tests/: test_airflow.py  test_ci_hygiene.py  test_factory.py  test_schema.py  test_store_schema.py
provero-flyte/: pyproject.toml
src/assay/: __init__.py
src/assay/cli/: main.py
src/assay/connectors/: duckdb.py  factory.py  postgres.py
src/assay/core/: engine.py  optimizer.py  profiler.py
src/assay/store/: sqlite.py
tests/: conftest.py  test_checks.py  test_engine.py  test_factory.py  test_optimizer.py  test_profiler.py  test_results.py  test_schema.py  test_store.py
