[project]
name = "apache-provero"
version = "0.1.0-dev"
description = "Provero workspace root"
requires-python = ">=3.11"

dependencies = [
    "provero",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv.workspace]
members = [
    "assay-core",
    "assay-airflow",
]

[tool.uv.sources]
provero = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["assay-core/src", "assay-airflow/src"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.pytest.ini_options]
testpaths = ["assay-core/tests"]
pythonpath = ["assay-core/src"]
